--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@ background-repeat: no-repeat;
           font-size: 160%;
           text-align: center;
         }
-
+a:link
+{
+color: white;
+}
+a:visited
+{
+color: white;
+}
+a:hover
+{
+color: black;
+}
 
 #example1 {
   border: 0px solid;
@@ -179,7 +190,7 @@ Milkshake Certified™<br>
     </div>
 <div>
 
-
+<p style = "font-size: 100%;"><a href = "https://github.com/gem-network">https://github.com/gem-network</a></p>
 
 </div>
 
